--- a/src/index.css
+++ b/src/index.css
@@ -36,15 +36,6 @@
     --ring: 217 100% 18%;
 
     --radius: 0.5rem;
-
-    --sidebar-background: 217 100% 18%;
-    --sidebar-foreground: 0 0% 100%;
-    --sidebar-primary: 3 84% 50%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 217 50% 25%;
-    --sidebar-accent-foreground: 0 0% 100%;
-    --sidebar-border: 217 50% 25%;
-    --sidebar-ring: 217 100% 18%;
   }
 }
 
